<resources>
    <string name="app_name">CloudProject</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_logout">Log out</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_hunting">Hunting</string>
    <string name="menu_map">Map</string>
    <string name="menu_new_location">Add new location</string>
    <string name="menu_hunt">Current Hunt</string>
    <string name="menu_hunt_information">Hunt Information</string>
    <string name="menu_hunt_list">Hunt List</string>
    <string name="menu_personal">Personal</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_found_location">Found location</string>

    <string name="home_second">Home Second</string>

    <string name="button_select">Select</string>
    <string name="button_get_hint">Get hint</string>
    <string name="button_add_location">Add location</string>

    <string name="text_next_location">Next location:</string>
    <string name="text_found_location">You have found:</string>
    <string name="text_title">Title:</string>
    <string name="text_description">Description:</string>
    <string name="text_add_location">Your new location:</string>

    <string name="hint_description">i.e. Lund Cathedral (Swedish: Lunds domkyrka) is a cathedral of the Lutheran Church of Sweden in Lund, Scania, Sweden. It is one of the oldest stone buildings still in use in Sweden.</string>
    <string name="hint_title">i.e. Lund Cathedral</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>
