<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_map">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.cloudproject.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_map"
        android:name="com.example.cloudproject.ui.map.MapFragment"
        android:label="@string/menu_map"
        tools:layout="@layout/fragment_map" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.cloudproject.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_found_location"
        android:name="com.example.cloudproject.ui.hunt.FoundLocationFragment"
        android:label="@string/menu_found_location"
        tools:layout="@layout/fragment_found_location" />


    <fragment
        android:id="@+id/nav_hunt"
        android:name="com.example.cloudproject.ui.hunt.CurrentHuntFragment"
        android:label="@string/menu_hunt"
        tools:layout="@layout/fragment_current_hunt" >
        <argument
            android:name="hunt"
            app:argType="com.example.cloudproject.models.Hunt" />
    </fragment>

    <fragment
        android:id="@+id/nav_hunt_list"
        android:name="com.example.cloudproject.ui.huntlist.HuntListFragment"
        android:label="@string/menu_hunt_list"
        tools:layout="@layout/fragment_hunt_list" >
        <action
            android:id="@+id/action_nav_hunt_list_to_nav_hunt_information"
            app:destination="@id/nav_hunt_information" />
    </fragment>

    <fragment
        android:id="@+id/nav_hunt_information"
        android:name="com.example.cloudproject.ui.hunt.HuntInformationFragment"
        android:label="@string/menu_hunt_information"
        tools:layout="@layout/fragment_hunt_information" >
        <argument
            android:name="hunt"
            app:argType="com.example.cloudproject.models.Hunt" />
        <action
            android:id="@+id/action_nav_hunt_information_to_nav_hunt"
            app:destination="@id/nav_hunt" />
    </fragment>
</navigation>